--- a/design_exploration/v1/designs_gpt/design-03-topo-ascent.html
+++ b/design_exploration/v1/designs_gpt/design-03-topo-ascent.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Montserrat+Alternates:wght@600;700&family=Spline+Sans+Mono:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../v2/common.css">
+  <link rel="stylesheet" href="../../v2/common.css">
   <style>
     :root {
       --bg: #061015;
@@ -137,10 +137,10 @@
       notificationTitle: "Topo Timer",
       indexHref: "./index.html",
       indexLabel: "GPT index",
-      backHref: "../index.html",
+      backHref: "../../index.html",
       backLabel: "Design explorer"
     };
   </script>
-  <script src="../v2/common.js"></script>
+  <script src="../../v2/common.js"></script>
 </body>
 </html>
