--- a/design_exploration/v1/designs_gpt/design-08-night-vector.html
+++ b/design_exploration/v1/designs_gpt/design-08-night-vector.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Manrope:wght@600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../v2/common.css">
+  <link rel="stylesheet" href="../../v2/common.css">
   <style>
     :root {
       --bg: #050b10;
@@ -72,6 +72,6 @@
       notificationTitle: "Night Vector Timer"
     };
   </script>
-  <script src="../v2/common.js"></script>
+  <script src="../../v2/common.js"></script>
 </body>
 </html>
