--- a/design_exploration/v1/designs_gpt/index.html
+++ b/design_exploration/v1/designs_gpt/index.html
@@ -159,8 +159,8 @@
       <h1>GPT Designs - Set 02 + Set 03</h1>
       <p>Ten dark, readability-first, low-friction game-style UI directions. Built on the shared simulator with rest timer defaulting to 3 seconds for this set.</p>
       <nav class="nav" aria-label="Navigation">
-        <a class="chip" href="../index.html">Design explorer</a>
-        <a class="chip" href="../v2/index.html">v2 designs</a>
+        <a class="chip" href="../../index.html">Design explorer</a>
+        <a class="chip" href="../../v2/designs%20gemini/index.html">v2 designs</a>
         <a class="chip" href="../designs_claude/index.html">Claude designs</a>
         <a class="chip" href="../designs_gemini/index.html">Gemini designs</a>
       </nav>
