--- a/design_exploration/v2/designs gemini/design-01-blacksite-command.html
+++ b/design_exploration/v2/designs gemini/design-01-blacksite-command.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./common.css">
+  <link rel="stylesheet" href="../common.css">
   <style>
     :root {
       --bg: #070b11;
@@ -69,6 +69,6 @@
       notificationTitle: "Blacksite Timer"
     };
   </script>
-  <script src="./common.js"></script>
+  <script src="../common.js"></script>
 </body>
 </html>
