--- a/design_exploration/v2/designs gemini/index.html
+++ b/design_exploration/v2/designs gemini/index.html
@@ -89,8 +89,8 @@
     <header>
       <h1>V2 Exploration: 5 New Directional Designs</h1>
       <p>Same corrected UX flow, five separate files, clean-edge modern visual systems, AAA-inspired narratives without store-style caricatures.</p>
-      <p class="back"><a href="../index.html">Open previous 5 designs</a></p>
-      <p class="back"><a href="../designs_gpt/index.html">Open GPT set 02 + set 03 designs</a></p>
+      <p class="back"><a href="../../index.html">Open design explorer</a></p>
+      <p class="back"><a href="../../v1/designs_gpt/index.html">Open GPT set 02 + set 03 designs</a></p>
     </header>
 
     <section class="links">
