--- a/design_exploration/v1/designs_gpt/design-04-reactor-room.html
+++ b/design_exploration/v1/designs_gpt/design-04-reactor-room.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Albert+Sans:wght@400;600;700&family=Spline+Sans+Mono:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../v2/common.css">
+  <link rel="stylesheet" href="../../v2/common.css">
   <style>
     :root {
       --bg: #0a0a0f;
@@ -132,10 +132,10 @@
       notificationTitle: "Reactor Timer",
       indexHref: "./index.html",
       indexLabel: "GPT index",
-      backHref: "../index.html",
+      backHref: "../../index.html",
       backLabel: "Design explorer"
     };
   </script>
-  <script src="../v2/common.js"></script>
+  <script src="../../v2/common.js"></script>
 </body>
 </html>
