--- a/design_exploration/v1/designs_gpt/design-05-drift-training.html
+++ b/design_exploration/v1/designs_gpt/design-05-drift-training.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Unbounded:wght@500;700&family=Spline+Sans+Mono:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../v2/common.css">
+  <link rel="stylesheet" href="../../v2/common.css">
   <style>
     :root {
       --bg: #070c12;
@@ -146,10 +146,10 @@
       notificationTitle: "Drift Timer",
       indexHref: "./index.html",
       indexLabel: "GPT index",
-      backHref: "../index.html",
+      backHref: "../../index.html",
       backLabel: "Design explorer"
     };
   </script>
-  <script src="../v2/common.js"></script>
+  <script src="../../v2/common.js"></script>
 </body>
 </html>
