--- a/design_exploration/v2/designs gemini/design-02-pitwall-protocol.html
+++ b/design_exploration/v2/designs gemini/design-02-pitwall-protocol.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500;700&family=Barlow:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./common.css">
+  <link rel="stylesheet" href="../common.css">
   <style>
     :root {
       --bg: #f2f4f8;
@@ -74,6 +74,6 @@
       notificationTitle: "Pitwall Timer"
     };
   </script>
-  <script src="./common.js"></script>
+  <script src="../common.js"></script>
 </body>
 </html>
